# swiftlingo

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: database.rs  history_ui.rs  hotkey.rs  languages.rs  main.rs  selection.rs  settings.rs  settings_ui.rs  style.css  translation.rs  ui_helpers.rs  window_manager.rs
