[package]
name = "swiftlingo"
version = "0.2.0"
edition = "2021"
description = "A fast and convenient desktop translator with multiple service support"
authors = ["Anassk"]
license = "MIT"

[dependencies]
gtk = { version = "0.6", package = "gtk4" }
gdk4-x11 = { version = "0.6", optional = true }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
x11 = { version = "2.21.0", features = ["xlib"] }
x11rb = { version = "0.12.0", features = ["allow-unsafe-code"] }
urlencoding = "2.1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
chrono = "0.4"
dirs = "5.0"

# For Wayland support
gio = "0.17.0"
glib = "0.17.0"
zbus = { version = "3.0", optional = true }

[build-dependencies]
pkg-config = "0.3"

[features]
default = ["x11"]
x11 = ["gdk4-x11"]
wayland-portal = ["zbus"]  # Enable this for Desktop Portal support